# krust-renderer

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: example_spheres.json  spheres.json
src/: aabb.rs  buffers.rs  bvh.rs  camera.rs  color.rs  hit.rs  lights.rs  main.rs  mat3.rs  material.rs  onb.rs  pdf.rs  process.rs  ray.rs  render.rs  render_setup.rs  setup.rs  sphere.rs  texture.rs  tri.rs  trimesh.rs  utility.rs  vec2.rs  vec3.rs
src/maya/plug-ins/: krust.py
src/maya/scripts/: create_light.py  create_material.py  render_scene.py
