[package]
name = "krrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
image = "0.24.4"
indicatif = "0.17.1"
serde_json = "1.0"
show-image = "0.13.1"
rayon = "1.5.1"
num_cpus = "1.14.0"